[gd_scene load_steps=10 format=2]

[ext_resource path="res://util/state/state.gd" type="Script" id=1]
[ext_resource path="res://baddies/player_detection.gd" type="Script" id=2]
[ext_resource path="res://util/state/state_machine.tscn" type="PackedScene" id=3]
[ext_resource path="res://baddies/behavior_state/heard_noise.gd" type="Script" id=4]
[ext_resource path="res://baddies/hearing.gd" type="Script" id=5]
[ext_resource path="res://baddies/behavior_state/idle.gd" type="Script" id=6]
[ext_resource path="res://baddies/hearing_controller.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=2]
radius = 500.0

[sub_resource type="CircleShape2D" id=3]
radius = 64.4981

[node name="controller" type="Node2D"]
process_priority = -1
script = ExtResource( 7 )

[node name="sight" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight"]
visible = false
shape = SubResource( 2 )

[node name="shoot_cooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5

[node name="hearing" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32
monitorable = false
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hearing"]
shape = SubResource( 3 )

[node name="behaviour_state" parent="." instance=ExtResource( 3 )]
process_priority = -1
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="behaviour_state"]
script = ExtResource( 6 )

[node name="heard_noise" type="Node" parent="behaviour_state"]
script = ExtResource( 4 )

[node name="look_at_noise" type="Node" parent="behaviour_state"]
script = ExtResource( 1 )

[node name="look_at_source_of_noise" type="Node" parent="behaviour_state"]
script = ExtResource( 1 )

[node name="target_in_sight" type="Node" parent="behaviour_state"]
script = ExtResource( 1 )

[connection signal="body_entered" from="sight" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="sight" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="shoot_cooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="area_entered" from="hearing" to="hearing" method="_on_noise_entered"]
